# sistema-triagem-ia

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  utils.py
src/data/: generator.py
src/models/: bayesian_net.py
src/optimization/: a_star.py  baselines.py
tests/: test_a_star.py  test_bayesian_net.py  test_generator.py  test_simulator.py  test_utils.py
